Caching | Fix images Shape